fixing whitespace in editor section.

--- a/practice-labs/ruby-for-qa/style/index.css
+++ b/practice-labs/ruby-for-qa/style/index.css
@@ -2111,7 +2111,7 @@ body.full-screen-editor {
   width: 100%;
   overflow: hidden; }
   .task-editor .editor-section {
-    height: 100%;
+    height: calc(100% - 40px);
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.05); }
     .task-editor .editor-section #worksheet, .task-editor .editor-section .right-pane {
